src/objects/OrderApi__Subscription__c.object
<CustomObject>
    <description>Subscriptions track the activation, expiration, and renewal dates for all Customer Subscriptions.</description>
    <fields>
        <fullName>CPBase__Hide_In_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related subscription will not be visible in the portal.</description>
        <inlineHelpText>When checked, the related subscription will not be visible in the portal.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPBase__Subscription_Management_Page_Override__c</fullName>
        <description>Enter the page name to be directed upon clicking the Manage button for the subscription&apos;s tile in the member portal&apos;s profile page.</description>
        <inlineHelpText>Enter the page name to be directed upon clicking the Manage button for the subscription&apos;s tile in the member portal&apos;s profile page.</inlineHelpText>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Duration__c</fullName>
        <formula>(today()- OrderApi__Activated_Date__c) /365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Conditionally Required ** Link to the subscribing Account. Required if the Subscription &quot;Subscribing Entity&quot; is &quot;Account&quot;. Defaults to the same Account assigned to the Sales Order Line that created the Subscription.</description>
        <inlineHelpText>** System Calculated Conditionally Required ** Link to the subscribing Account. Required if the Subscription &quot;Subscribing Entity&quot; is &quot;Account&quot;. Defaults to the same Account assigned to the Sales Order Line that created the Subscription.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Activated_Date__c</fullName>
        <description>** System Calculated Required Override ** The date the Subscription was activated.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the Subscription was activated.</inlineHelpText>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Active_Assignments__c</fullName>
        <description>** System Calculated ** The count of related Assignments where &quot;Is Active&quot; is checked.</description>
        <inlineHelpText>** System Calculated ** The count of related Assignments where &quot;Is Active&quot; is checked.</inlineHelpText>
        <label>Active Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignment_Badge_Types_CSV__c</fullName>
        <description>SYSTEM</description>
        <formula>OrderApi__Item__r.OrderApi__Assignment_Badge_Types_CSV__c</formula>
        <inlineHelpText>SYSTEM</inlineHelpText>
        <label>SYSTEM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignments_Allowed__c</fullName>
        <description>** System Calculated ** Max number of assignments allowed according to related. Rolling up from related Subscription Line&apos;s &quot;Assignments Allowed&quot; filed.</description>
        <inlineHelpText>** System Calculated ** Max number of assignments allowed according to related. Rolling up from related Subscription Line&apos;s &quot;Assignments Allowed&quot; filed.</inlineHelpText>
        <label>Assignments Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_City__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Contact__c</fullName>
        <description>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Country__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Postal_Code__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_State__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Street__c</fullName>
        <description>**System Calculated/Conditional** Billing Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Billing Details is checked.</description>
        <inlineHelpText>**System Calculated/Conditional** Billing Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Billing Details is checked.</inlineHelpText>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related Business Group.</description>
        <inlineHelpText>** System Calculated ** Link to related Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Billing_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s billing address is used. The contact on the order will populate the billing contact field.</description>
        <inlineHelpText>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s billing address is used. The contact on the order will populate the billing contact field.</inlineHelpText>
        <label>Calculate Billing Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Shipping_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked the system will calculate shipping details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s shipping address is used. The contact on the subscription will populate the shipping contact field.</description>
        <inlineHelpText>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s billing address is used. The contact on the order will populate the billing contact field.</inlineHelpText>
        <label>Calculate Shipping Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Cancelled_Date__c</fullName>
        <description>** System Calculated Override ** Defaults to the value of today&apos;s date when the Subscription &quot;Is Cancelled&quot; is checked.</description>
        <inlineHelpText>** System Calculated Override ** Defaults to the value of today&apos;s date when the Subscription &quot;Is Cancelled&quot; is checked.</inlineHelpText>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Cancelled_Reason__c</fullName>
        <description>** Conditionally Required ** Select the most appropriate reason for cancelling the Subscription. Required when a Subscription &quot;Status&quot; equals &quot;Cancelled&quot;.</description>
        <inlineHelpText>** Conditionally Required ** Select the most appropriate reason for cancelling the Subscription. Required when a Subscription &quot;Status&quot; equals &quot;Cancelled&quot;.</inlineHelpText>
        <label>Cancelled Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Conditionally Required ** Link to the subscribing Contact. Required if the Subscription &quot;Subscribing Entity&quot; is &quot;Contact&quot;. Defaults to the same Contact assigned to the Sales Order Line that created the Subscription.</description>
        <inlineHelpText>** System Calculated Conditionally Required ** Link to the subscribing Contact. Required if the Subscription &quot;Subscribing Entity&quot; is &quot;Contact&quot;. Defaults to the same Contact assigned to the Sales Order Line that created the Subscription.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Current_Term_End_Date__c</fullName>
        <description>** System Calculated Required Override ** The end date (Expiration Date) for the current subscription term.</description>
        <inlineHelpText>** System Calculated Required Override ** The end date (Expiration Date) for the current subscription term.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Current_Term_Start_Date__c</fullName>
        <description>** System Calculated Required Override ** The start date for the current subscription term.</description>
        <inlineHelpText>** System Calculated Required Override ** The start date for the current subscription term.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer_Link__c</fullName>
        <description>** System Calculated ** Link to the subscribing entity record -- either the related Account or Contact.</description>
        <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;),HYPERLINK(&quot;/&quot; &amp; OrderApi__Account__r.Id, OrderApi__Account__r.Name), HYPERLINK(&quot;/&quot; &amp; OrderApi__Contact__r.Id, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName))</formula>
        <inlineHelpText>** System Calculated ** Link to the subscribing entity record -- either the related Account or Contact.</inlineHelpText>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Days_To_Lapse__c</fullName>
        <description>** System Calculated ** The number of days until the Subscription will expire.</description>
        <inlineHelpText>** System Calculated ** The number of days until the Subscription will expire.</inlineHelpText>
        <label>Days to Lapse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Optional Subscription description</description>
        <inlineHelpText>Optional Subscription description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the subscription will automatically attempt to renew itself by charging the related Payment Method. Defaults unchecked.</description>
        <inlineHelpText>When checked, the subscription will automatically attempt to renew itself by charging the related Payment Method. Defaults unchecked.</inlineHelpText>
        <label>Enable Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>** System Calculated Required Override ** Select &quot;Account&quot; if the primary subscriber is the linked Account, otherwise select &quot;Contact&quot;. Defaults to the value of the same field on the Sales Order Line that created the Subscription.</description>
        <inlineHelpText>** System Calculated Required Override ** Select &quot;Account&quot; if the primary subscriber is the linked Account, otherwise select &quot;Contact&quot;. Defaults to the value of the same field on the Sales Order Line that created the Subscription.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Expired_Date__c</fullName>
        <description>** System Calculated Required Override ** The date the Subscription expires. Automatically calculated from rules defined on the related Subscription Plan.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the Subscription expires. Automatically calculated from rules defined on the related Subscription Plan.</inlineHelpText>
        <label>Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Grace_Period_End_Date__c</fullName>
        <description>This date is calculated by the Paid Through Date plus the number of days defined on the Subscription Plan&apos;s Grace Period field.</description>
        <inlineHelpText>This date is calculated by the Paid Through Date plus the number of days defined on the Subscription Plan&apos;s Grace Period field.</inlineHelpText>
        <label>Grace Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Hide_In_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related subscription will not be visible in the portal.</description>
        <inlineHelpText>When checked, the related subscription will not be visible in the portal.</inlineHelpText>
        <label>Hide In Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__In_Grace_Period__c</fullName>
        <formula>OrderApi__Current_Term_End_Date__c &lt; TODAY()&amp;&amp; OrderApi__Grace_Period_End_Date__c &gt;= TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Grace Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked the Subscription is considered &quot;Active&quot;. Defaults checked.</description>
        <inlineHelpText>When checked the Subscription is considered &quot;Active&quot;. Defaults checked.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will inactivate all related Subscribers and unassign any related benefits.</description>
        <inlineHelpText>When checked, the system will inactivate all related Subscribers and unassign any related benefits.</inlineHelpText>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the Subscription has expired.</description>
        <inlineHelpText>Checked when the Subscription has expired.</inlineHelpText>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the Subscription is considered &quot;Pending&quot;. Defaults unchecked.</description>
        <inlineHelpText>When checked the Subscription is considered &quot;Pending&quot;. Defaults unchecked.</inlineHelpText>
        <label>Is Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Subscription is suspended. Subscriptions can be suspended to prevent automatic payment via Payment Method on file or to revoke benefits (Badges, etc...) granted by the Subscription Item.</description>
        <inlineHelpText>Checked if the Subscription is suspended. Subscriptions can be suspended to prevent automatic payment via Payment Method on file or to revoke benefits (Badges, etc...) granted by the Subscription Item.</inlineHelpText>
        <label>Is Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Upgraded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RESERVED</description>
        <inlineHelpText>RESERVED</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related Item Class.</description>
        <inlineHelpText>** System Calculated ** Link to related Item Class.</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Required Override ** Link to the primary &quot;Subscription&quot; Item</description>
        <inlineHelpText>** System Calculated Required Override ** Link to the primary &quot;Subscription&quot; Item</inlineHelpText>
        <label>Item (Primary)</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Last_Amendment_Date__c</fullName>
        <description>** System Calculated Override ** The date the Subscription was amended.</description>
        <inlineHelpText>** System Calculated Override ** The date the Subscription was amended.</inlineHelpText>
        <label>Last Amendment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Last_Renewed_Date__c</fullName>
        <description>** System Calculated Override ** The date the Subscription was last renewed.</description>
        <inlineHelpText>** System Calculated Override ** The date the Subscription was last renewed.</inlineHelpText>
        <label>Last Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Last_System_Run__c</fullName>
        <description>** SYSTEM FIELD DO NOT UPDATE **</description>
        <inlineHelpText>** SYSTEM FIELD DO NOT UPDATE **</inlineHelpText>
        <label>Last System Run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Line_Count__c</fullName>
        <description>** System Calculated ** Count of related Subscription Lines.</description>
        <inlineHelpText>** System Calculated ** Count of related Subscription Lines.</inlineHelpText>
        <label>Line Count</label>
        <summaryForeignKey>OrderApi__Subscription_Line__c.OrderApi__Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Maximum_Number_of_Assignments__c</fullName>
        <description>** System Calculated Required Override ** The maximum number of &quot;Assignments&quot; aka &quot;Subscribers&quot; allowed for &quot;Assignment&quot; against the Subscription is derived from the related &quot;Subscription&quot; Item &quot;Maximum Number of Assignments&quot; field.</description>
        <inlineHelpText>** System Calculated Required Override ** The maximum number of &quot;Assignments&quot; aka &quot;Subscribers&quot; allowed for &quot;Assignment&quot; against the Subscription is derived from the related &quot;Subscription&quot; Item &quot;Maximum Number of Assignments&quot; field.</inlineHelpText>
        <label>zDEPRACATED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Next_Scheduled_Payment_Date__c</fullName>
        <description>System Calculated ** Defines the next present scheduled payment date (renewal or installment) as defined by a scheduled payment related to the subscription.</description>
        <inlineHelpText>System Calculated ** Defines the next present scheduled payment date (renewal or installment) as defined by a scheduled payment related to the subscription.</inlineHelpText>
        <label>Next Scheduled Payment Date</label>
        <summarizedField>OrderApi__Renewal__c.OrderApi__Next_Scheduled_Payment_Date__c</summarizedField>
        <summaryFilterItems>
            <field>OrderApi__Renewal__c.OrderApi__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Next_Scheduled_Renewal_Date__c</fullName>
        <description>** System Calculated Override ** The date the next renewal is scheduled to be processed for the Subscription, defaults to the Current Term End Date. Valid only for Subscriptions where Auto Renew is enabled and a valid payment method is linked.</description>
        <inlineHelpText>** System Calculated Override ** The date the next renewal is scheduled to be processed for the Subscription, defaults to the Current Term End Date. Valid only for Subscriptions where Auto Renew is enabled and a valid payment method is linked.</inlineHelpText>
        <label>Next Scheduled Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Paid_Through_Date__c</fullName>
        <description>Defines the last active date of the subscription including all subscription renewals.</description>
        <inlineHelpText>Defines the last active date of the subscription including all subscription renewals.</inlineHelpText>
        <label>Paid Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to the related Payment Method on file for the subscribing customer - used for automatic payment charges. Required if the parent Subscription Plan &quot;Require Payment Method&quot; field is checked.</description>
        <inlineHelpText>** Conditionally Required ** Link to the related Payment Method on file for the subscribing customer - used for automatic payment charges. Required if the parent Subscription Plan &quot;Require Payment Method&quot; field is checked.</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>OrderApi__Payment_Method__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Renewal_Override__c</fullName>
        <description>Enter the URL to be directed upon clicking the renew button for subscriptions on the manage subscription page.</description>
        <inlineHelpText>Enter the URL to be directed upon clicking the renew button for subscriptions on the manage subscription page.</inlineHelpText>
        <label>RESERVED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Renewals__c</fullName>
        <description>** System Calculated ** Rollup Summary field, counts number of Renewals.</description>
        <inlineHelpText>** System Calculated ** Rollup Summary field, counts number of Renewals.</inlineHelpText>
        <label>Terms</label>
        <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** The source Sales Order Line that created the Subscription.</description>
        <inlineHelpText>** System Calculated ** The source Sales Order Line that created the Subscription.</inlineHelpText>
        <label>Sales Order Line (Source)</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_City__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Contact__c</fullName>
        <description>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Country__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Postal_Code__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_State__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Street__c</fullName>
        <description>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Shipping Street when Calculate Shipping Details is checked.</description>
        <inlineHelpText>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Shipping Street when Calculate Shipping Details is checked.</inlineHelpText>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Status__c</fullName>
        <description>** System Calculated Required ** The status of the Subscription.</description>
        <inlineHelpText>** System Calculated Required ** The status of the Subscription.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Dues_Total__c</fullName>
        <description>** System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines.</description>
        <inlineHelpText>** System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines.</inlineHelpText>
        <label>Subscription Dues Total</label>
        <summarizedField>OrderApi__Subscription_Line__c.OrderApi__Total__c</summarizedField>
        <summaryForeignKey>OrderApi__Subscription_Line__c.OrderApi__Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Management_Page_Override__c</fullName>
        <description>Enter the page name to be directed upon clicking the Manage button for the subscription&apos;s tile in the member portal&apos;s profile page.</description>
        <inlineHelpText>Enter the page name to be directed upon clicking the Manage button for the subscription&apos;s tile in the member portal&apos;s profile page.</inlineHelpText>
        <label>Subscription Management Page Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Plan</label>
        <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Suspended_Date__c</fullName>
        <description>The date the Subscription was suspended.</description>
        <inlineHelpText>The date the Subscription was suspended.</inlineHelpText>
        <label>Suspended Date</label>
        <type>Date</type>
    </fields>
</CustomObject>